# shutdown-computer

./: Readme.md  Readme_mqtt.md  build.ps1  build.sh  install.ps1  install.sh
client/: package.json  pnpm-lock.yaml
client/apps/web/: index.html  package.json  vite.config.ts
client/apps/web/.tanstack/tmp/: 09c1ae10-9fda8a67280edb1be0f2630fe878e6f4
client/apps/web/dev-dist/: sw.js
client/apps/web/src/: .cta.json  App.tsx  main.tsx  routeTree.gen.ts
client/apps/web/src/apis/: index.ts  request.ts
client/apps/web/src/components/: form.tsx
client/apps/web/src/components/Dialog/: index.tsx
client/apps/web/src/components/Sector/: index.tsx
client/apps/web/src/components/icons/: AmdIcon.tsx  DefaultDevice.tsx  IntelIcon.tsx  LinuxDevice.tsx  MacDevice.tsx  WindowsDevice.tsx  index.ts
client/apps/web/src/layout/: Layout.tsx
client/apps/web/src/parts/shutdown/: ShutDownDialog.tsx  ShutdownCard.tsx  index.tsx
client/apps/web/src/routes/: __root.tsx  index.tsx
client/apps/web/src/routes/config/: index.tsx
client/apps/web/src/routes/dashboard/: index.tsx
client/apps/web/src/stores/: index.ts  useConfiguration.ts
client/apps/web/web/: index.html
client/apps/web/web/assets/: index-1FG99KxF.js  index-Chi5tB1T.css
server/: Cargo.toml  cert.pem  config.toml  key.pem
server/src/: main.rs
server/src/api/: handle.rs
server/src/app/: mod.rs  mqtt_ha.rs  web_server.rs
server/src/app/mqtt_ha/: control_mqtt.rs  discover_mqtt.rs  mod.rs  mqtt_ha.rs
server/src/common/: app.rs  config.rs
server/src/system/: check.rs  mod.rs  operate.rs
(+10 files in other folders)
