[package]
name = "shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.4.2"
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors"] }
mio = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
