[package]
name = "shutdown-auto"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.4.2"
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
mio = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rustls = "0.23.38"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
hyper = "1.9.0"
http = "1.4.0"
toml = "1.1.2"
